--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,8 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.92.1",
+    "@tanstack/vue-query-devtools": "^6.1.2",
     "axios": "^1.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
